Fixing bug like image streching on mobile and typewriter effect outside section

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -5,6 +5,7 @@
 
 .profile {
   max-width: 18em;
+  max-height: 40em;
 }
 
 .my-details {
